--- a/TODO
+++ b/TODO
@@ -16,3 +16,4 @@ DONE Traverse parse tree to find node nearest to a given location
   to extract as much information as possible.
 - Rework handling of errors and warnings
 - Editor integration : allow to retrieve definition boundary to improve synchronisation
+- Wrap Btype snapshot system to prevent monomorphic variable instantiations
